# CarGo

./: .gitignore  car.sh  setup.sh
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/apriltag_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/cv_camera/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/get_matrix/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/my_hand_eye/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/usb_cam/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/apriltag_ros/: AnalyzeSingleImage.h  AnalyzeSingleImageRequest.h  (+3 more)
devel/lib/: libapriltag.so.3
opencv_api/: ColorFinding.cpp  ColorFinding.h  Color_Boundary.cpp  HistogramLookup.cpp  LBD_ColorEnhanced.cpp  ParkingAreaTarget_2.cpp  QRcode.cpp  QRcode.h  QRcode_api.cpp  QRcode_main_api.cpp  Square_with_border.cpp  Turning_Corner_line.cpp  Turning_corner_focus.cpp  Turning_corner_focus_2.cpp  bezier.cpp  color_target-v2.cpp  cv_user.h  driver_line_2.cpp  driver_line_3.cpp  gramma.cpp  main_api.cpp  square_point_add.cpp
opencv_api/CamShift target finding/: Target_Tracking.cpp  cv_user.h  main_api.cpp
opencv_api/ellipse椭圆查找/: cv_user.h  ellipse_main.cpp  ellipse_opencv.cpp  ellipse_opencv_1.cpp
opencv_api/karman/: KaeMan.cpp
opencv_api/停车区（矩形）查找/: POINT_FIND.cpp  main_api.cpp  usings.hpp
src/calibration/: CMakeLists.txt  package.xml
src/ellipse_detection/: CMakeLists.txt  package.xml
src/fast_ellipse_detector/: CMakeLists.txt  package.xml
src/fdilink_ahrs/: wheeltec_udev.sh
src/lsn10/: CMakeLists.txt  README.md  readme.txt
src/mmdetection_ros/: CMakeLists.txt  package.xml
src/motion_controller/: CMakeLists.txt  package.xml
src/my_hand_eye/: CMakeLists.txt  QR_code_plugins.xml  arm.sh  color_plugins.xml  nodelet_plugins.xml  package.xml
src/robot_pose_ekf/: CMakeLists.txt
src/simple_follower/: CMakeLists.txt  package.xml
src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml  wheeltec_udev.sh
src/wheeltec_robot_rc/: CMakeLists.txt
src/yolov5_ros/: CMakeLists.txt  package.xml
src/zxing-ros/zxing_cv/: CMakeLists.txt  package.xml
src/zxing-ros/zxing_cv/launch/: zxing_qrdetector.launch
src/zxing-ros/zxing_cv/src/: qr_detector.cpp  qr_detector.h  qr_detector_node.cpp  qr_detector_nodelet.cpp
(+321 files in other folders)
